<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:scrollbarThumbVertical="@null"
    tools:context=".RegisterActivity">


    <androidx.cardview.widget.CardView xmlns:Card_View="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:padding="10dp"
        Card_View:cardCornerRadius="5dp"
        Card_View:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                Card_View:boxBackgroundColor="#fff"
                Card_View:passwordToggleTintMode="src_atop"
                Card_View:errorEnabled="true">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/full_name"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_Text_Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                Card_View:boxBackgroundColor="#fff"
                Card_View:passwordToggleTintMode="src_atop"
                Card_View:errorEnabled="true">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_Text_Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                Card_View:boxBackgroundColor="#fff"
                Card_View:passwordToggleEnabled="true"
                Card_View:passwordToggleTint="#800080"
                Card_View:passwordToggleTintMode="src_atop"
                Card_View:errorEnabled="true"
                Card_View:counterEnabled="true"
                Card_View:counterMaxLength="10">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:maxLength="10"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Confirm_TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                Card_View:boxBackgroundColor="#fff"
                Card_View:passwordToggleEnabled="true"
                Card_View:passwordToggleTint="#800080"
                Card_View:passwordToggleTintMode="src_atop"
                Card_View:errorEnabled="true"
                Card_View:counterEnabled="true"
                Card_View:counterMaxLength="10">

                <EditText
                    android:id="@+id/confirm_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/confirm_passoword"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:singleLine="true"
                    android:maxLength="10"
                     />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:text="@string/register_button"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/already_registered_login"
                android:textColor="#0000FF"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>